
= Changelog
:toc: preamble
:project-url: https://github.com/sorairolake/abcrypt
:compare-url: {project-url}/compare
:issue-url: {project-url}/issues
:pull-request-url: {project-url}/pull

All notable changes to this project will be documented in this file.

The format is based on https://keepachangelog.com/[Keep a Changelog], and this
project adheres to https://semver.org/[Semantic Versioning].

== {compare-url}/abcrypt-cli-v0.2.9\...abcrypt-cli-v0.2.10[0.2.10] - 2024-01-07

=== Changed

* Reduce the target architecture and the archive format for pre-built binaries
  ({pull-request-url}/189[#189])

== {compare-url}/abcrypt-cli-v0.2.8\...abcrypt-cli-v0.2.9[0.2.9] - 2023-12-22

=== Changed

* Update screenshot ({pull-request-url}/178[#178])

== {compare-url}/abcrypt-cli-v0.2.7\...abcrypt-cli-v0.2.8[0.2.8] - 2023-12-20

=== Added

* Add screenshot ({pull-request-url}/174[#174])

== {compare-url}/abcrypt-cli-v0.2.6\...abcrypt-cli-v0.2.7[0.2.7] - 2023-12-07

=== Changed

* Update documentation ({pull-request-url}/160[#160])

== {compare-url}/abcrypt-cli-v0.2.5\...abcrypt-cli-v0.2.6[0.2.6] - 2023-12-03

=== Changed

* Change settings for the release profile ({pull-request-url}/157[#157])

== {compare-url}/abcrypt-cli-v0.2.4\...abcrypt-cli-v0.2.5[0.2.5] - 2023-11-29

=== Changed

* Bump MSRV to 1.70.0 ({pull-request-url}/139[#139])

== {compare-url}/abcrypt-cli-v0.2.3\...abcrypt-cli-v0.2.4[0.2.4] - 2023-11-04

=== Changed

* Update dependencies

== {compare-url}/abcrypt-cli-v0.2.2\...abcrypt-cli-v0.2.3[0.2.3] - 2023-09-30

=== Changed

* Change the structure of the Argon2 parameters ({pull-request-url}/70[#70])

== {compare-url}/abcrypt-cli-v0.2.1\...abcrypt-cli-v0.2.2[0.2.2] - 2023-09-11

=== Added

* Add the `homepage` field to `Cargo.toml` ({pull-request-url}/50[#50])
* Add the book ({pull-request-url}/56[#56])

=== Changed

* Update man pages ({pull-request-url}/53[#53])

== {compare-url}/abcrypt-cli-v0.2.0\...abcrypt-cli-v0.2.1[0.2.1] - 2023-09-05

=== Changed
