@@ -14,6 +14,12 @@ All notable changes to this project will be documented in this file.
 The format is based on https://keepachangelog.com/[Keep a Changelog], and this
 project adheres to https://semver.org/[Semantic Versioning].
 
+== {compare-url}/abcrypt-cli-v0.2.10\...HEAD[Unreleased]
+
+=== Changed
+
+* Remove last blank line of `--version` ({pull-request-url}/225[#225])
+
 == {compare-url}/abcrypt-cli-v0.2.9\...abcrypt-cli-v0.2.10[0.2.10] - 2024-01-07
 
 === Changed
